[gd_scene load_steps=5 format=3 uid="uid://b0v06luymgval"]

[ext_resource type="Script" path="res://big_dude.gd" id="1_o40b0"]
[ext_resource type="Texture2D" uid="uid://cs2dptfnrsdju" path="res://Sprites2/BigDude.png" id="2_vstnn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sv8pr"]
size = Vector2(6, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0i8vh"]
size = Vector2(8, 17)

[node name="BigDude" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_o40b0")

[node name="Dude" type="Sprite2D" parent="."]
texture = ExtResource("2_vstnn")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_sv8pr")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_0i8vh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0i8vh")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
